src/ui/snapshots/callr__ui__tests__auth_bearer_layout_snapshot.snap
---
source: src/ui/mod.rs
expression: text
---
┌Collection──────────────────┐┌GET · scratch───────────────────────────────────────────────────────────────────────────┐
│                            ││                                                                                        │
│                            │└────────────────────────────────────────────────────────────────────────────────────────┘
│                            │┌Auth: Bearer────────────────────────────────────────────────────────────────────────────┐
│                            ││token: secret-token                                                                     │
│                            │└────────────────────────────────────────────────────────────────────────────────────────┘
│                            │┌Response────────────────────────────────────────────────────────────────────────────────┐
│                            ││No response yet. Press 'i' to edit the URL, Enter to send.                              │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────┘
 NORMAL   a: cycle type  j/k: field  i: edit  l/Enter: toggle in  Tab/S-Tab: cycle pane  q: quit
