src/ui/snapshots/callr__ui__tests__empty_state_layout_snapshot.snap
---
source: src/ui/mod.rs
expression: text
---
┌Collection──────────────────┐┌GET · scratch───────────────────────────────────────────────────────────────────────────┐
│                            ││                                                                                        │
│                            │└────────────────────────────────────────────────────────────────────────────────────────┘
│                            │┌Auth: None──────────────────────────────────────────────────────────────────────────────┐
│                            ││press 'a' to choose an auth type (Bearer / Basic / API Key)                             │
│                            │└────────────────────────────────────────────────────────────────────────────────────────┘
│                            │┌Response────────────────────────────────────────────────────────────────────────────────┐
│                            ││No response yet. Press 'i' to edit the URL, Enter to send.                              │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────┘
 NORMAL   j/k: move  gg/G: top/bottom  h/l: collapse/expand  Enter: open  Tab/S-Tab: cycle pane  :history  :collections
